# dodgeai-graph-chat

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
.cursor/plans/: dbml_jsonl_postgres_loader_e4eb4cda.plan.md  jsonl_preprocess_consolidation_f9103345.plan.md  jsonl_to_dbml_schema_8c05171b.plan.md  web_ui_for_agent_7307be58.plan.md
agent/: main.py  model.py  neo_4j.schema.md  pyproject.toml  response  system_prompt.py
agent/subagent/: cypher_agent.py  cypher_subagent.py
chats/: chat.graph.model.md  cursor_conversational_graph_agent_ui.md  cursor_cors_policy_and_resource_loading.md  cursor_docker_compose_script_for_neo4j.md  cursor_file_content_review.md  cursor_file_path_correction.md  cursor_id_resolution_strategy_enhanceme.md  cursor_json_schema_to_markdown_conversi.md  cursor_loading_envs_with_python_dotenv.md  cursor_logical_references_in_schema_dbm.md  cursor_openrouter_api_key_configuration.md  cursor_proposed_graph_model_formatting.md  cursor_python_script_for_jsonl_processi.md  cursor_python_script_for_postgresql_dat.md  cursor_system_prompt_merging.md
data_creation/: .dockerignore  Dockerfile  generate_dbml_schema.py  load_jsonl_to_postgres.py  load_neo.py  preprocess.py  proposed_graph_model.md  pyproject.toml  schema.dbdiagram  schema.dbml
data_creation/data/: preprocess_summary.md
utils/convert_schema_json_to_md/: convert_schema_json_to_md.py  neo_4j.schema.json
web/frontend/: Dockerfile  package.json  (+1 more)
web/server/: .env.example  Dockerfile  agent_wrapper.py  data_creation.env  graph_service.py  main.py  pyproject.toml
(+25 files in other folders)
